modify related files
modify related files 11.17 2014

--- a/android_iphone/app/css/ui-slide.css
+++ b/android_iphone/app/css/ui-slide.css
@@ -1,7 +1,7 @@
 .circle {
     position: absolute;
     left: 0;
-   	bottom: 0em;
+   	bottom: 0;
     width: 100%;
     text-align: center;
     background: rgba(0, 0, 0, .5);
